rmdemux: fix tag memory leak

tags is not being freed after being merged to the
pending_tags.

https://bugzilla.gnome.org/show_bug.cgi?id=752404